@@ -5,7 +5,7 @@ use warnings;
 use strict;
 use utf8;
 
-use Test::More tests => 4;
+use Test::More;
 
 use String::Print;
 my $pi = 3.1415;
@@ -28,3 +28,7 @@ is $g->sprinti("a={p€}", p => $pi), "a=3.14 EUR";
 is $g->sprinti("b={p₤}", p => $pi), "b=2.55 PND";
 
 is $g->sprinti("a={p€%10s}", p => $pi), "a=  3.14 EUR", 'stacking modifiers';
+
+is $g->sprinti("Hello &amp; greetz {name HTML}", name => "André"), 'Hello &amp; greetz Andr&eacute;', 'html modifier';
+
+done_testing;
