@@ -6,6 +6,9 @@ stated differently.
 
 version 0.95:
 
+	Improvements:
+	- modifier HTML
+
 version 0.94: Sun  1 Mar 12:37:41 CET 2020
 
 	Fixes:
